style.css
:root {
	--primary-bright-blue: hsl(220, 98%, 61%);
	--gradient-bg-1: hsl(192, 100%, 67%);
	--gradient-bg-2: hsl(280, 87%, 65%);

	--light-vl-gray: hsl(0, 0%, 98%);
	--light-vl-grayish-blue: hsl(236, 33%, 92%);
	--light-l-grayish-blue: hsl(233, 11%, 84%);
	--light-d-grayish-blue: hsl(236, 9%, 61%);
	--light-vd-grayish-blue: hsl(235, 19%, 35%);

	--dark-vd-blue: hsl(235, 21%, 11%);
	--dark-vd-des-blue: hsl(235, 24%, 19%);
	--dark-l-grayish-blue: hsl(234, 39%, 85%);
	--dark-l-grayish-blue-hover: hsl(236, 33%, 92%);
	--dark-d-grayish-blue: hsl(234, 11%, 52%);
	--dark-vd-grayish-blue-1: hsl(233, 14%, 35%);
	--dark-vd-grayish-blue-2: hsl(237, 14%, 26%);
}
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
body {
	background-color: var(--dark-vd-blue);
	height: 100%;
	width: 100%;
	font-size: 18px;
	font-family: 'Josefin Sans', sans-serif;
}
.image-wrapper {
	height: 35vh;
	background-image: url('./images/bg-desktop-dark.jpg');
	background-size: cover;
	background-position: top top;
	background-repeat: no-repeat;
}
.image-wrapper > img {
	height: auto;
	min-width: 100%;
}
.main-block {
	padding: 2rem;
	min-width: 100%;
	display: grid;
	place-items: center;
}
.todo {
	width: 550px;
	margin: 0 auto;
}
.todo__head {
	display: flex;
	align-items: baseline;
	justify-content: space-between;
	color: white;
	margin-bottom: 1.5rem;
}
.todo__head-text {
	font-size: 2.7rem;
	font-weight: 400;
	letter-spacing: 1rem;
}
.todo__head-icon {
	cursor: pointer;
	height: 100%;
	width: 2rem;
	display: flex;
}
.todo__head-icon__item {
	position: relative;
	top: 0rem;
	align-self: center;
	width: 100%;
}
.todo__input-block {
	margin-bottom: 2rem;
	width: 100%;
	display: flex;
}
.todo__input-item__check {
	border-top-left-radius: 2px;
	border-bottom-left-radius: 2px;
	display: grid;
	place-items: center;
	background-color: var(--dark-vd-des-blue);
}
.todo__input-item__check-circle {
	width: 1.5rem;
	height: 1.5rem;
	background-color: var(--dark-vd-des-blue);
	border-radius: 50%;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	-ms-border-radius: 50%;
	-o-border-radius: 50%;
}
.todo__input-item__check-circle__wrap {
	display: grid;
	place-items: center;
	border-radius: 50%;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	-ms-border-radius: 50%;
	-o-border-radius: 50%;
	margin: 1rem;
	width: 1.6rem;
	height: 1.6rem;
	background: var(--dark-d-grayish-blue);
}
.todo__input-item__check-circle__check {
	width: 100%;
	height: 100%;
	display: grid;
	place-items: center;
	display: none;
}
.todo__input-item__check-circle__check img {
	height: auto;
	width: 55%;
}

.todo__input-item {
	border-top-right-radius: 2px;
	border-bottom-right-radius: 2px;
	color: var(--dark-l-grayish-blue);
	width: 100%;
	font-size: 1.25rem;
	padding: 1rem 0.2rem 1rem 0.5rem;
	border: none;
	background-color: var(--dark-vd-des-blue);
	border: 1px solid var(--dark-vd-des-blue);
	font-family: 'Josefin Sans', sans-serif;
}
.todo__input-item:focus {
	outline: none;
}
.todo__block {
	border-radius: 10px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	-ms-border-radius: 10px;
	-o-border-radius: 10px;
}
.todo__block-item {
	cursor: pointer;
	display: flex;
	width: 100%;
}
.todo__block-item__check {
	cursor: pointer;
	border-top-left-radius: 2px;
	border-bottom-left-radius: 2px;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: var(--dark-vd-des-blue);
}
.todo__block-item__check-circle {
	width: 1.5rem;
	height: 1.5rem;
	background-color: var(--dark-vd-des-blue);
	border-radius: 50%;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	-ms-border-radius: 50%;
	-o-border-radius: 50%;
}
.todo__block-item__check-circle__wrap {
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 50%;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	-ms-border-radius: 50%;
	-o-border-radius: 50%;
	margin: 1rem;
	width: 1.6rem;
	height: 1.6rem;
	background: var(--dark-d-grayish-blue);
}
.todo__block-item__check-circle__check {
	width: 100%;
	height: 100%;
	display: grid;
	place-items: center;
	display: none;
}
.todo__block-item__check-circle__check img {
	height: auto;
	width: 55%;
}
.todo__block-item__check:hover .todo__block-item__check-circle__wrap {
	background: linear-gradient(
		125deg,
		var(--gradient-bg-1) 0%,
		var(--gradient-bg-2) 100%
	);
}
.todo__block-item._active .todo__block-item__check-circle__wrap {
	background: linear-gradient(
		125deg,
		var(--gradient-bg-1) 0%,
		var(--gradient-bg-2) 100%
	);
}
.todo__block-item._active .todo__block-item__check-circle {
	background: linear-gradient(
		125deg,
		var(--gradient-bg-1) 0%,
		var(--gradient-bg-2) 100%
	);
}
.todo__block-item._active .todo__block-item__check-circle__check {
	display: grid;
}
.todo__block-item._active
	.todo__block-item__text-wrapper
	> .todo__block-item__text {
	text-decoration: line-through;
	color: var(--dark-d-grayish-blue);
}

.todo__block-item__text-wrapper {
	border-top-right-radius: 2px;
	border-bottom-right-radius: 2px;
	color: var(--dark-d-grayish-blue);
	width: 100%;
	font-size: 1.25rem;
	padding: 0.2rem 0 0 0;
	display: flex;
	align-items: center;
	border: none;
	background-color: var(--dark-vd-des-blue);
	color: var(--dark-l-grayish-blue);
	border: 1px solid var(--dark-vd-des-blue);
}
.todo__info {
	margin-bottom: 2.5rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
	color: var(--dark-d-grayish-blue);
	width: 100%;
	font-size: 1rem;
	background-color: var(--dark-vd-des-blue);
	border-top: 1px solid var(--dark-d-grayish-blue);
}
.todo__info-left {
	padding-left: 1rem;
}
.panel-button {
	border: none;
	background: none;
	color: var(--dark-d-grayish-blue);
	font-family: 'Josefin Sans', sans-serif;
	font-size: 0.95rem;
	cursor: pointer;
	padding: 1rem 0;
	transition: color 0.15s ease-out;
	-webkit-transition: color 0.15s ease-out;
	-moz-transition: color 0.15s ease-out;
	-ms-transition: color 0.15s ease-out;
	-o-transition: color 0.15s ease-out;
}
.panel-button._active {
	color: var(--primary-bright-blue);
}
.panel-button:hover {
	color: var(--dark-l-grayish-blue-hover);
}
.todo__info-panel__all {
	padding: 0.35rem;
}
.todo__info-panel__active {
	padding: 0.35rem;
}
.todo__info-panel__completed {
	padding: 0.35rem;
}
.todo__info-clear {
	padding: 1rem;
}
.todo__info-clear:hover {
	color: var(--dark-l-grayish-blue-hover);
}
.todo__drag-and-drop {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}
.todo__drag-and-drop__text {
	font-size: 1rem;
	color: var(--dark-d-grayish-blue);
}

.dragging {
	opacity: 0.5;
}

.todo__info-panel-mobile {
	display: none;
}

@media (max-width: 768px) {
	.todo {
		width: 300px;
	}
	.todo__info {
		margin-bottom: 1rem;
	}
	.todo__info-panel {
		display: none;
	}
	.todo__info-panel-mobile {
		border-radius: 5px;
		background-color: var(--dark-vd-des-blue);
		display: flex;
		align-items: center;
		justify-content: center;
		margin-bottom: 1rem;
		-webkit-border-radius: 5px;
		-moz-border-radius: 5px;
		-ms-border-radius: 5px;
		-o-border-radius: 5px;
	}
	.panel-button-mobile {
		border: none;
		background: none;
		color: var(--dark-d-grayish-blue);
		font-family: 'Josefin Sans', sans-serif;
		font-size: 0.95rem;
		cursor: pointer;
		padding: 1rem 0.5rem;
		transition: color 0.15s ease-out;
		-webkit-transition: color 0.15s ease-out;
		-moz-transition: color 0.15s ease-out;
		-ms-transition: color 0.15s ease-out;
		-o-transition: color 0.15s ease-out;
	}
	.panel-button-mobile._active {
		color: var(--primary-bright-blue);
	}
}

